@@ -1610,7 +1610,7 @@ class integration.ERPTuitionInfoCreationReportFile /* implements IGenericFile */
  
 class paymentpenalty.PaymentPenaltySettings {
 	Boolean active;
-	LocalizedString emolumentDescription;
+	LocalizedStringAT emolumentDescription;
 	Boolean createPaymentCode;
 }
 
